name:                markd
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/yamadapc/markd#readme
license:             GPLv3
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2015 Pedro Tacla Yamada
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable markd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , libui
                     , pandoc
  default-language:    Haskell2010
